fixed overflow on projects page

--- a/projectInfoStyle.css
+++ b/projectInfoStyle.css
@@ -7,25 +7,26 @@
 
 body {
     display: flex;
-    flex-direction: column; /* Stacks items vertically */
+    flex-direction: column; 
     align-items: center;
     min-height: 100vh;
     background: #fff;
 }
 
 .wrapper {
-    margin: 20px 0; /* Space between image-text boxes */
+    margin: 20px 0; 
     width: 90%;
-    display: flex; /* Makes the image and text box appear next to each other */
-    align-items: flex-start; /* Aligns items at the start of the flex container */
+    display: flex; 
+    align-items: flex-start; 
 }
 
 .wrapper2 {
-    margin: 20px 0; /* Space between text-image boxes */
+    margin: 20px 0; 
     width: 90%;
     display: flex; 
     align-items: flex-start; 
     flex-direction: row-reverse; 
+}
 .wrapper2 img {
     max-width: 320px;
     border: 3px solid #000;
